# template_WebRTC

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
backend/webrtc_template/: __main__.py  config.py
backend/webrtc_template/modes/: __init__.py  p2p.py  sfu.py
backend/webrtc_template/signaling/: manager.py  messages.py  room.py  server.py
docker/: .env.template  Dockerfile  docker-compose.yml
docker/caddy/: Caddyfile
docker/coturn/: turnserver.conf
docs/: signaling-messages.md
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  Home.svelte  styles.css
frontend/src/lib/: media.js  peer.js  signaling.js
frontend/src/modes/: Mesh.svelte  P2P.svelte  SFU.svelte
