[project]
name = "webrtc-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "aiortc>=1.9",
    "av>=13.0",
    "python-dotenv>=1.0",
    "aiohttp-cors>=0.7",
    "msgspec>=0.21.1",
    "structlog>=25.5.0",
]

[project.scripts]
webrtc-template = "webrtc_template.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/webrtc_template"]

[tool.uv]
package = true
